# Bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: script.py  settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
