[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Nelson Carvalho",email = "nelsonfilth@hotmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "pytest-django (>=4.9.0,<5.0.0)",
    "faker (>=35.0.0,<36.0.0)",
    "factory-boy (>=3.3.1,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
   
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"

